--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@progress/kendo-angular-buttons": "5.5.2",
     "@progress/kendo-angular-common": "1.2.4",
     "@progress/kendo-angular-dateinputs": "4.4.1",
